--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,3 +29,5 @@ jobs:
         with:
           branch: gh-pages  # The target branch for deployment
           folder: dist      # The folder to deploy
+          clean: true       # Optional: Cleans the deployment branch automatically before pushing
+          debug: true       # Optional: Outputs additional logs for debugging
