--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,9 +25,12 @@ jobs:
         run: npm run build
 
       - name: Deploy to GitHub Pages
-        uses: JamesIves/github-pages-deploy-action@v4
-        with:
+        run: npm run deploy
+
+#      - name: Deploy to GitHub Pages
+#        uses: JamesIves/github-pages-deploy-action@v4
+#        with:
 #          branch: gh-pages  # The target branch for deployment
-          folder: dist      # The folder to deploy
+#          folder: dist      # The folder to deploy
 #          clean: true       # Optional: Cleans the deployment branch automatically before pushing
 #          debug: true       # Optional: Outputs additional logs for debugging
