--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - main  # Runs this workflow on push events to the main branch
 
+permissions:
+  contents: write
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest  # Specifies the runner environment
@@ -24,13 +27,13 @@ jobs:
       - name: Build
         run: npm run build
 
-      - name: Deploy to GitHub Pages
-        run: npm run deploy
-
 #      - name: Deploy to GitHub Pages
-#        uses: JamesIves/github-pages-deploy-action@v4
-#        with:
+#        run: npm run deploy
+
+      - name: Deploy to GitHub Pages
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
 #          branch: gh-pages  # The target branch for deployment
-#          folder: dist      # The folder to deploy
+          folder: dist      # The folder to deploy
 #          clean: true       # Optional: Cleans the deployment branch automatically before pushing
 #          debug: true       # Optional: Outputs additional logs for debugging
